--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -56,7 +56,7 @@
         {
             <br class="d-md-none" />
             <hr class="d-md-none" />
-            <div class="row bg-light">
+            <div class="row bg-almost">
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Fleet"
                        asp-action="Create"
@@ -78,7 +78,7 @@
                        class="btn btn-outline-primary">@localizer["New Race"]</a>
                 </div>
             </div>
-            <div class="row bg-light">
+            <div class="row bg-almost">
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Regatta"
                        asp-action="Edit"
