--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -47,7 +47,7 @@
         {
             <br class="d-md-none" />
             <hr class="d-md-none" />
-            <div class="row bg-light">
+            <div class="row bg-almost">
                 <div class="col-sm-4 my-2">
                     <a asp-controller="Race"
                        asp-action="Create"
