--- a/SailScores.Web/Views/Shared/_AdminToDoList.cshtml
+++ b/SailScores.Web/Views/Shared/_AdminToDoList.cshtml
@@ -8,7 +8,7 @@
 
 @if (Model != null && Model.Count != 0)
 {
-    <div class="row bg-light alert alert-primary">
+    <div class="row bg-almost alert alert-primary">
         <div class="col-12">
             <h4>Finish setting up this club</h4>
             <dl class="row">
