--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section Sidebar {
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+    <nav class="col-md-2 d-none d-md-block bg-almost sidebar">
         <div class="sidebar-sticky sticky-top">
             <ul class="nav flex-column">
                 <li class="nav-item">
