--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -11,7 +11,7 @@
     <hr />
     @if (Model.Tips != null && Model.Tips.Count != 0)
     {
-        <div class="row bg-light alert alert-primary">
+        <div class="row bg-almost alert alert-primary">
             <div class="col-12">
                 <dl class="row">
                     @foreach (var tip in Model.Tips)
@@ -247,10 +247,10 @@
                                                placeholder="place"
                                                value="@score.CodePoints?.ToString("0.#")" />
                                     </div>
-                                    <button class="btn btn-light move-up" type="button"><span class="fa fa-angle-up"></span></button>
-                                    <button class="btn btn-light move-down" type="button"><span class="fa fa-angle-down"></span></button>
+                                    <button class="btn btn-secondary move-up" type="button"><span class="fa fa-angle-up"></span></button>
+                                    <button class="btn btn-secondary move-down" type="button"><span class="fa fa-angle-down"></span></button>
                                     &ensp;
-                                    <button class="btn btn-light delete-button" type="button" data-toggle="modal"
+                                    <button class="btn btn-secondary delete-button" type="button" data-toggle="modal"
                                             data-target="#deleteConfirm" data-competitorid="@score.CompetitorId">
                                         <span class="far fa-trash-alt text-danger"></span>
                                     </button>
