--- a/SailScores.Web/Views/Race/Index.cshtml
+++ b/SailScores.Web/Views/Race/Index.cshtml
@@ -14,7 +14,7 @@
 }
 
 @section Sidebar {
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+    <nav class="col-md-2 d-none d-md-block bg-almost sidebar">
         <div class="sidebar-sticky sticky-top">
             <ul class="nav flex-column">
                 @foreach (var item in
