remove text-muted

--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -82,7 +82,7 @@
                 <div class="col-12">
                     <div class="form-group">
                         <label asp-for="Classes" class="control-label mb-0"></label>
-                        <span asp-description-for="Classes" class="mt-0 form-text text-muted small" />
+                        <span asp-description-for="Classes" class="mt-0 form-text small" />
                         <input asp-for="Classes" class="form-control" />
                         <span asp-validation-for="Classes" class="text-danger"></span>
                     </div>
@@ -92,7 +92,7 @@
                 <div class="col-12">
                     <div class="form-group">
                         <label asp-for="TypicalDiscardRules" class="control-label mb-0"></label>
-                        <span asp-description-for="TypicalDiscardRules" class="mt-0 form-text text-muted small" />
+                        <span asp-description-for="TypicalDiscardRules" class="mt-0 form-text small" />
                         <input asp-for="TypicalDiscardRules" class="form-control input-large" aria-describedby="TypicalDiscardRules-description" />
                         <span asp-validation-for="TypicalDiscardRules" class="text-danger"></span>
                     </div>
