--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -27,13 +27,13 @@
                 </span>
             }
         </h1>
-        <h5 class="text-muted d-none d-md-inline">
+        <h5 class="d-none d-md-inline">
             @Model.Item.StartDate?.ToString("D") -
             @Model.Item.EndDate?.ToString("D")
             <br />
             <br />
         </h5>
-        <span class="text-muted d-md-none">
+        <span class="d-md-none">
             @Model.Item.StartDate?.ToString("d") -
             @Model.Item.EndDate?.ToString("d")
         </span>
