--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -31,7 +31,7 @@
 }
 
 <h2>@Model.Name</h2>
-<h3>Administrator View</h3>
+<h3>Club Properties</h3>
 <hr />
 <div class="row">
     <form asp-action="Edit">
