Delay loading of some css

--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -205,7 +205,7 @@
                 </div>
                     }
                 </div>
-                <button class="btn btn-secondary" type="button"
+                <button class="btn btn-light" type="button"
                         onclick="addNewRow()">
                     <span class="fas fa-plus"></span>
                 </button>
