--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -108,7 +108,6 @@
                         </a>
                     </h5>
                 </div>
-
                 <div id="collapseAdvanced" class="collapse" role="tabpanel" aria-labelledby="advancedHeading" data-parent="#advancedFields">
                     <div class="card-body">
                         <div class="row">
@@ -247,10 +246,10 @@
                                                placeholder="place"
                                                value="@score.CodePoints?.ToString("0.#")" />
                                     </div>
-                                    <button class="btn btn-secondary move-up" type="button"><span class="fa fa-angle-up"></span></button>
-                                    <button class="btn btn-secondary move-down" type="button"><span class="fa fa-angle-down"></span></button>
+                                    <button class="btn btn-light move-up" type="button"><span class="fa fa-angle-up"></span></button>
+                                    <button class="btn btn-light move-down" type="button"><span class="fa fa-angle-down"></span></button>
                                     &ensp;
-                                    <button class="btn btn-secondary delete-button" type="button" data-toggle="modal"
+                                    <button class="btn btn-light delete-button" type="button" data-toggle="modal"
                                             data-target="#deleteConfirm" data-competitorid="@score.CompetitorId">
                                         <span class="far fa-trash-alt text-danger"></span>
                                     </button>
