--- a/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
+++ b/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
@@ -26,10 +26,10 @@
                        type="text" pattern="[0-9]+([\.,][0-9]+)?"
                        placeholder="place" />
             </div>
-            <button class="btn btn-secondary move-up" type="button"><span class="fa fa-angle-up"></span></button>
-            <button class="btn btn-secondary move-down" type="button"><span class="fa fa-angle-down"></span></button>
+            <button class="btn btn-light move-up" type="button"><span class="fa fa-angle-up"></span></button>
+            <button class="btn btn-light move-down" type="button"><span class="fa fa-angle-down"></span></button>
             &ensp;
-            <button class="btn btn-secondary delete-button" type="button" data-toggle="modal"
+            <button class="btn btn-light delete-button" type="button" data-toggle="modal"
                     data-target="#deleteConfirm">
                 <span class="far fa-trash-alt text-danger"></span>
             </button>
