--- a/SailScores.Web/Views/Club/Stats.cshtml
+++ b/SailScores.Web/Views/Club/Stats.cshtml
@@ -27,6 +27,7 @@
             @if (Model.CanEdit)
             {
                 <a asp-controller="Club"
+                   asp-action="EditStats"
                    class="btn btn-outline-primary">@localizer["Edit Notes"]</a>
             }
         </div>
