--- a/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
+++ b/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
@@ -6,19 +6,19 @@
 
 <h1>Request Submitted</h1>
 
-<h4>We'll send an email soon</h4>
+<h4>Check your email</h4>
 <hr />
 <div class="row">
     <div class="col-12">
-        <p>If everything looks good, we'll send an email to @Model.ContactEmail once your club is set up or if we have any questions. </p>
+        <p>If everything looks good, we're sending an email to @Model.ContactEmail with information about how to complete your club set up.</p>
         <p>
-            If you don't hear from us within 48 hours, please reach out via
+            If you don't receive an email within the next hour please reach out via
             Twitter (@@SailScores) or email (<a href="mailto:info@sailscores.com">info@sailscores.com</a>
             or <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>).
         </p>
         <p>
             If you haven't already, you can <a asp-controller="Account" asp-action="Register">
-                register your login information.</a> Make sure to use the contact email you provided.
+                register your login information.</a> Be sure to use the contact email you provided in the Club Request.
         </p>
         <br />
 </div>
