Better text on club request pages

--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -6,21 +6,17 @@
 
 <h1>Give it a try. It's free.</h1>
 
-<h4>Interested in seeing how SailScores works?</h4>
+<h4>Interested in trying out SailScores?</h4>
 <hr />
 <div class="row">
     <div class="col-12">
         <p>
-            When clubs are created, they are not listed on the front page, but are
-            accessible to anyone with the URL. If you would like your club's data cleared
-            out or reset, <a href="mailto:info@sailscores.com">let us know.</a>
+            Complete the information below to create club pages for your group. The
+            club won't be listed on the front page, but is
+            accessible to anyone with the URL that we'll email you.
         </p>
-        <p>
-            Inactive clubs will be archived and removed from the site
-            periodically.  A club is considered inactive if it hasn't had
-            any activity in a year, or if the initial setup isn't completed
-            within 2 months. We'll contact you and give you a chance to export
-            data first.
+        <p>If you would like the club's data reset,
+           <a href="mailto:info@sailscores.com">let us know.</a>
         </p>
         <br />
     </div>
@@ -119,6 +115,20 @@
         </form>
     </div>
 </div>
+<div class="row">
+    <div class="col-12">
+        <br/>
+        <p><em>
+            Inactive clubs will be archived and removed from the site
+            periodically. A club is considered inactive if it hasn't had
+            any activity in a year or the initial setup isn't completed
+            within 2 months.
+        </em></p>
+    </div>
+</div>
+
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
