--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -65,7 +65,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                @localizer["Boat"]
+                                @localizer["Boat Name"]
                             </div>
                         </div>
                         <div class="col-md-3">
