Get suggested season for season create

--- a/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
+++ b/SailScores.Web/Views/ClubRequest/RequestSubmitted.cshtml
@@ -20,9 +20,12 @@
             Twitter (@@SailScores).
         </p>
         <p>
-            If you haven't already, please <a asp-controller="Account" asp-action="Register">
-            register for an account.</a> Be sure to use the contact email you
-            provided in the Club Request.
+            <strong>
+                <a asp-controller="Account" asp-action="Register">
+                    Register for an account.
+                </a> </strong> Be sure to use the contact email you
+                provided in the Club Request.
+
         </p>
         <br />
 </div>
