Disable autocomplete on some name fields

--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -29,7 +29,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label asp-for="ClubName" class="control-label"></label>
-                        <input asp-for="ClubName" class="form-control" />
+                        <input asp-for="ClubName" class="form-control" autocomplete="off"/>
                         <span asp-validation-for="ClubName" class="text-danger"></span>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
 
                     <div class="form-group">
                         <label asp-for="ClubInitials" class="control-label"></label>
-                        <input asp-for="ClubInitials" class="form-control" />
+                        <input asp-for="ClubInitials" class="form-control" autocomplete="off"/>
                         <span asp-validation-for="ClubInitials" class="text-danger"></span>
                     </div>
                 </div>
