--- a/SailScores.Web/Views/Season/Create.cshtml
+++ b/SailScores.Web/Views/Season/Create.cshtml
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <span class="small">Usually named after the year, such as @DateTime.UtcNow.Year </span>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" autocomplete="off"/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
