Home page text updates

--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -6,16 +6,13 @@
 
 <h1>Give it a try. It's free.</h1>
 
-<h4>Interested in trying out SailScores?</h4>
+<h4>Interested in easy race results?</h4>
 <hr />
 <div class="row">
     <div class="col-12">
         <p>
-            Complete the information below to create club pages for your group. The
-            club won't be listed on the front page, but is
-            accessible to anyone with the URL that we'll email you.
-        </p>
-        <p>If you would like the club's data reset,
+            Complete the information below to create club pages for your
+            group. If you would like the club's data reset,
            <a href="mailto:info@sailscores.com">let us know.</a>
         </p>
         <br />
