--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -36,9 +36,9 @@
     score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
 </p>
 <p>
-    Some features may require more resources or payment to other services (such as
-    speech recognition or automatic weather recording.) When those are ready we'll find a way
-    to only charge the users of the "Premium" features.
+    Some day, some features may require more resources or payment to other services (such as
+    speech recognition or automatic weather recording.) When that becomes an issue
+    we'll find a way to only charge the users of the "Premium" features.
 </p>
 <p>
     We are committed to providing a free option regardless. Our clubs
@@ -46,20 +46,21 @@
     like to share.
 </p>
 <p>
-    By the way, SailScores doesn't use any tracking or cookies except the minimum required to track logged-in users. Your
-    data is not being sold by SailScores.
+    By the way, SailScores doesn't use any tracking or cookies except the minimum required to
+    track logged-in users. Your data is not being sold by SailScores.
 </p>
 <br />
 <h3>Future</h3>
 We're working on new features, including:
 <ul>
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
-    <li>Fields to track race conditions, with analysis for competitors in different conditions.</li>
+    <li>Additional analysis for competitors in different conditions.</li>
     <li>More import and export options to integrate with existing scoring software.</li>
     <li>Deeper trend reporting for clubs: Are your races growing year over year?</li>
-    <li>More options for result entry: let's keep making result entry simpler and faster. We've got even more ideas for this...</li>
+    <li>More options for result entry: let's keep making result entry simpler and faster.
+        We've got even more ideas for this...</li>
 </ul>
-<p>View a full list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
+<p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
 <br />
 <h3>Feedback</h3>
 <p>
