--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
             <li>Shareable direct links to club, series, and regatta pages.</li>
             <li>Competitor statistics across multiple series.</li>
             <li>Count a single race in one or many series.</li>
-            <li>Club landing page can include links to home page or other results.</li>
+            <li>Automatically collect and share weather information.</li>
             <li>Smartphone, MacOS, and Windows friendly.</li>
         </ul>
     </div>
