--- a/SailScores.Web/Views/Templates/ClubCreated.cshtml
+++ b/SailScores.Web/Views/Templates/ClubCreated.cshtml
@@ -40,7 +40,9 @@
         <a href="@accountUrl">@accountUrl</a> using the email address you provided
         ( @Model.ContactEmail ). That account can edit this club.
         The club's pages are hidden from the front page of SailScores, but still
-        accessible to anyone through the URL above.
+        accessible to anyone through the URL above. You can edit the club settings
+        to make your pages visible on the front SailScores page and let search
+        engines find your races.
     </p>
     <p>
         There are a few more steps to complete before you score your first race,
